src/test/deca/context/valid/class_decl/method_decl.deca
// Description:
//    Déclaration d'une classe avec un attribut int
//
// Resultats:
//    Aucune erreur
// 
// Historique:
//    cree le 01/01/2016

class Test {
	void methodeVide() {
	}
	void methodeAvecArgs(int a, float b, boolean c, String d) {
	}
	int methodeAvecRetour() {
		return 0;
	}

	int b;
	void b() {
		c = 2;
	}
}

{

}

