src/test/deca/context/invalid/class/calls/wrong_argument_number.deca
// Description:
//    Appel d'une méthode avec le mauvais nombre de paramètres
//
// Resultats:
//    undefined method
// 
// Historique:
//    cree le 01/01/2016

class A {
	void a(int a) {}
}

{
	A a;
	a.a();
}

